# roboteam_vision

./: .gitignore  CMakeLists.txt  change_vision_ports.sh  install_dependencies.sh  package.xml  readme.md
include/roboteam_vision/: roboteam_vision.h  transform.h
include/roboteam_vision/convert/: convert_geometry_current.h  convert_referee.h  convert_units.h
msg/: DetectionFrame.msg  DetectionRobot.msg  FieldCircularArc.msg  FieldLineSegment.msg  GeometryCameraCalibration.msg  GeometryData.msg  GeometryFieldSize.msg  RefboxCmd.msg
src/: crashtest.cpp  proto_to_ros.cpp  proto_to_ros.h  roboteam_vision.cpp  transform.cpp
src/convert/: convert_detection.cpp  convert_detection.h  convert_geometry_current.cpp  convert_geometry_current.h  convert_geometry_legacy.cpp  convert_geometry_legacy.h  convert_referee.cpp  convert_referee.h  convert_units.cpp  convert_units.h
src/net/: robocup_ssl_client.cpp  robocup_ssl_client.h
src/proto/cpp/: messages_robocup_ssl_referee.pb.cc  messages_robocup_ssl_referee.pb.h
